# Ex2

./: .gitignore  BMPinformation.cpp  BMPinformation.hpp  BitMap.cpp  BitMap.hpp  BitMapFactory.cpp  BitMapFactory.hpp  CMakeLists.txt  ClassMatrix.cpp  ClassMatrix.hpp  ErrorCodes.hpp  Exceptions.cpp  Exceptions.hpp  Headers.cpp  Headers.hpp  README.md  bmp  bmp_tester.cpp  colorTupple.hpp  details.txt  file_reading.cpp  file_reading.hpp  headers.cpp  headers.hpp  main.cpp
src/: ClassMatrix.cpp  Exceptions.cpp  Exceptions.hpp  bmp_tester.cpp
